# ops-scripts

./: .gitconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  chroot.sh  flash-sdcard.py  justfile  lib-loader.sh  lib.sh  manage-backups.py  nvim.lua  packages.sh  setup-containers.py  setup-dotfiles.lua  setup-dotfiles.py  setup_common.py  upgrade-immich.py
archiso/: custom-archiso.sh  mount-nfs.sh  setup-archiso-env.sh  setup-custom-archiso.sh  setup-sendmail-bridge.sh  test-archiso-qemu.sh
backup/: rsync-backup.sh  tar-backup.sh
dotfiles/: abcde.conf  ctags  (+19 more)
microcontroller/zigbeeween/: .gitignore  CLAUDE.md  Justfile  LICENSE  README.md  code.py  find-tinyc6.sh  pyproject.toml
microcontroller/zigbeeween/zigbee_border_gateway/: Justfile  README.md  find-tinys3d.sh  find-xiaoc6.sh
microcontroller/zigbeeween/zigbee_border_gateway/tinys3d_wifi/: CMakeLists.txt  Justfile  README.md  sdkconfig.defaults
microcontroller/zigbeeween/zigbee_border_gateway/tinys3d_wifi/main/: Kconfig.projbuild  main.c
microcontroller/zigbeeween/zigbee_border_gateway/xiaoc6_zigbee/: CMakeLists.txt  Justfile  README.md  partitions.csv  pyproject.toml  sdkconfig.defaults
microcontroller/zigbeeween/zigbee_border_gateway/xiaoc6_zigbee/circuitpython_poc/: Justfile  code.py
microcontroller/zigbeeween/zigbee_border_gateway/xiaoc6_zigbee/main/: main.c  main_old_wifi_zigbee.c
microcontroller/zigbeeween/zigbee_controller/: Justfile  README.md  log.zigbeeween_controller.20251028154634.txt  log.zigbeeween_controller.20251028161242.txt  sdkconfig.defaults
microcontroller/zigbeeween/zigbee_controller/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
microcontroller/zigbeeween/zigbee_halloween_trigger/: Justfile  README.md
microcontroller/zigbeeween/zigbee_halloween_trigger/main/: CMakeLists.txt  idf_component.yml  main.c
microcontroller/zigbeeween/zigbee_haunted_pumpkin_scarecrow/: CMakeLists.txt  Justfile  README.md  sdkconfig.defaults
microcontroller/zigbeeween/zigbee_haunted_pumpkin_scarecrow/main/: CMakeLists.txt  idf_component.yml  main.c
microcontroller/zigbeeween/zigbee_rip_tombstone/: CMakeLists.txt  Justfile  README.md  find-xiao-esp32c6.sh  partitions.csv  sdkconfig.defaults
microcontroller/zigbeeween/zigbee_rip_tombstone/main/: CMakeLists.txt  idf_component.yml  main.c
(+57 files in other folders)
