[project]
name = "zigbeeween"
version = "0.1.0"
description = "Halloween automation using ESP32-S3 and Zigbee"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["circuitpython", "esp32", "pir", "motion-sensor", "microcontroller"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
]

dependencies = [
    "circup>=1.5.0",
    "pyserial>=3.5",
    "adafruit-ampy>=1.1.0",
    "esptool>=4.7.0",
    "adafruit-circuitpython-framebuf>=1.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"code.py" = ["F401"]  # Allow unused imports in CircuitPython main file

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["zigbeeween"]
force-single-line = false
lines-after-imports = 2

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.uv]
link-mode = "copy"
